completed url shortener app

--- a/app/views/report_mailer/generate_report.html.erb
+++ b/app/views/report_mailer/generate_report.html.erb
@@ -1,25 +1,25 @@
-<section>
-  <table>
-    <caption>
-      Url Shortener App Report
+<section class="container">
+  <table class="w-full">
+    <caption class="text-2xl">
+      Url Shortener App Report:
     </caption>
     <thead>
-      <tr className="bg-indigo-500 text-white">
-        <th></th>
-        <th>Original</th>
-        <th>Short</th>
-        <th></th>
+      <tr class="bg-indigo-500 text-white">
+        <th class="py-2 text-2xl font-normal tracking-wider">Pin/Unpin</th>
+        <th class="py-2 text-2xl font-normal tracking-wider">Original</th>
+        <th class="py-2 text-2xl font-normal tracking-wider">Short</th>
+        <th class="py-2 text-2xl font-normal tracking-wider">Clicks</th>
       </tr>
     </thead>
     <tbody>
       <% @urls.each do |url|%>
       <tr>
-        <td className="px-4 py-2">
-          <%= url.pinned ? "Pinned" : "Not Pinned" %>
+        <td class="px-4 py-2"><%= url.pinned ? "Pinned" : "Not Pinned" %></td>
+        <td class="px-4 py-2"><%= url.original_url %></td>
+        <td class="px-4 py-2">
+          <%= link_to "#{root_url}#{url.slug}", url.original_url %>
         </td>
-        <td className="px-4 py-2"><% url.original_url %></td>
-        <td className="px-4 py-2"><%"#{root_url}/#{url.slug}" %></td>
-        <td className="px-4 py-2"><% url.click_count %></td>
+        <td class="px-4 py-2"><%= url.click_count %></td>
       </tr>
       <%end%>
     </tbody>
